# minswpr

./: Cargo.toml  LICENSE  README.md  minswpr.linux.toml  minswpr.toml  pre-commit  rustfmt.toml
configs/: minswpr.expert.toml  minswpr.inty.toml
minswpr/: Cargo.toml  minswpr.toml
minswpr/src/: config.rs  control.rs  events.rs  fonts.rs  input.rs  layout.rs  lib.rs  main.rs  model.rs  stopwatch.rs
minswpr/src/app/: app.rs  context.rs  mod.rs
minswpr/src/board/: board.rs  mod.rs  tests.rs
minswpr/src/config/: difficulties.rs  mod.rs
minswpr/src/draw/: control.rs  macros.rs  mod.rs  text.rs
minswpr/src/draw/board/: cell.rs  mod.rs
minswpr/src/input/: board.rs  control.rs  events.rs  mod.rs
minswpr/src/input/events/: backend.rs  mod.rs
minswpr/src/layout/: base.rs  control.rs  mod.rs
minswpr/src/math/: mod.rs  point.rs
minswpr/src/models/: mod.rs
minswpr/src/render/: colors.rs  control.rs  macros.rs  mod.rs
minswpr/src/render/board/: cell.rs  mod.rs
minswpr_derive/: Cargo.toml
minswpr_derive/src/: lib.rs
reba/: Cargo.toml
reba/src/: app.rs  context.rs  fonts.rs  init.rs  lib.rs
reba/src/draw/: mod.rs
reba/src/models/: mod.rs
src/: app.rs  board.rs  fonts.rs  input.rs  layout.rs  lib.rs  main.rs
src/app/: app.rs  config.rs  context.rs  mod.rs
src/board/: board.rs  tests.rs
src/math/: mod.rs  point.rs
src/render/: board.rs  colors.rs  control.rs  mod.rs
src/render/board/: builder.rs  cell.rs  mod.rs
