[package]
name = "minswpr"
version = "0.1.0"
authors = ["Walker Crouse <Walker.Crouse@bjss.com>"]
edition = "2018"

[dependencies]
minswpr_derive = { path = "../minswpr_derive" }
sdl2 = { version = "^0.33.0", features = ["ttf"] }
bitflags = "^1.2.1"
rand = "^0.7.3"
itertools = "^0.8.2"
toml = "^0.5.6"
serde = { version = "^1.0.104", features = ["derive"] }
derive_builder = "^0.9.0"
derive-new = "^0.5.8"
